fabric/testdata/out/ing_spp-product-identity-perf-test-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"09f4689e-aaf5-4044-b5b7-b9f2088318c9","deployment-id":"d-2ra6pjhfno3q3m2vq6fs87ed2r","pipeline-id":"l-2j2jz7dxvehx8rvs15wuj4sajb"},"name":"spp-product-identity-perf-test-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"spp-product-identity-perf-test.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-identity-perf-test","servicePort":"http"},"pathType":"ImplementationSpecifi [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2021-09-20T13:48:01Z"
  generation: 1
  labels:
    controller-uid: 09f4689e-aaf5-4044-b5b7-b9f2088318c9
    deployment-id: d-2ra6pjhfno3q3m2vq6fs87ed2r
    pipeline-id: l-2j2jz7dxvehx8rvs15wuj4sajb
  name: spp-product-identity-perf-test-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-identity-perf-test
    uid: 09f4689e-aaf5-4044-b5b7-b9f2088318c9
  resourceVersion: "1378641703"
  uid: b42d6bc3-386e-4906-9e73-22925aca0659
spec:
  rules:
  - host: spp-product-identity-perf-test.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-perf-test
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
